# M-LADIS-Jerry

./: .gitignore  .gitmodules  README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/classifier/lib/classifier/: pose_array_publisher_node
install/classifier/share/classifier/: local_setup.dsv  package.dsv  package.sh  package.zsh
install/localization/lib/localization/: localization_node
install/localization/share/localization/: local_setup.sh  package.sh
install/mapping/lib/mapping/: map_node
install/mapping/share/mapping/: local_setup.sh  package.sh  package.xml
install/nearest_poster_yaw/share/nearest_poster_yaw/: package.sh  package.zsh
install/nearest_poster_yaw/share/nearest_poster_yaw/launch/: john.py  nodes.py  sim.py
install/px4_msgs/share/ament_index/resource_index/parent_prefix_path/: px4_msgs
install/px4_msgs/share/px4_msgs/: package.sh
install/px4_ros_com/lib/px4_ros_com/: debug_vect_advertiser  offboard_control  sensor_combined_listener  test_flight_control  vehicle_gps_position_listener  vis_loc_GPS_spoof
install/px4_ros_com/share/ament_index/resource_index/package_run_dependencies/: px4_ros_com
install/px4_ros_com/share/px4_ros_com/: package.dsv  package.sh
install/wpgen/lib/wpgen/: ML_send_wp
install/wpgen/share/wpgen/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
wpgen/: CMakeLists.txt  package.xml  setup.cfg  setup.py
wpgen/wpgen/: ML_send_wp.py  package.xml
wpgen/wpgen/gym-drone/: setup.py
wpgen/wpgen/gym-drone/gym_PDR.egg-info/: PKG-INFO  SOURCES.txt
wpgen/wpgen/gym-drone/gym_drone/envs/: droneexplorer.py
wpgen/wpgen/wpgen/: ML_send_wp.py
ws_sensor_combined/: .gitignore  all_clusters.csv  bounds.csv  boundstime.py  centroid_visualizer.py  centroids.csv  clean.sh  cluster_viz.py  image_positions.txt  output_xyzi_matrix.csv  predator_centroids.csv  predator_visualizer.py  predator_xyzi_matrix.csv  wall_centroids.csv  wall_filter_visualizer.py  walls.csv  xyz_matrix_visualizer.py  xyzi_matrix.csv  z.csv
ws_sensor_combined/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ws_sensor_combined/install/apriltag_ros/share/apriltag_ros/: local_setup.dsv  local_setup.sh  package.sh
ws_sensor_combined/install/apriltag_ros/share/apriltag_ros/cmake/: apriltag_rosConfig.cmake  apriltag_ros__rosidl_typesupport_cExport.cmake  apriltag_ros__rosidl_typesupport_cppExport.cmake  (+9 more)
ws_sensor_combined/install/classifier/share/classifier/: local_setup.sh  package.bash  package.ps1  package.sh
ws_sensor_combined/install/lidar_conversions/lib/lidar_conversions/: generic_conversion_node  hesai_conversion_node  livox_conversion_node  ouster_conversion_node  robosense_conversion_node  velodyne_conversion_node
ws_sensor_combined/install/lidar_conversions/share/lidar_conversions/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ws_sensor_combined/install/lidar_slam/lib/lidar_slam/: aggregation_node
ws_sensor_combined/install/lidar_slam/share/lidar_slam/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ws_sensor_combined/install/lidar_slam_test/lib/lidar_slam_test/: lidar_slam_test_node
ws_sensor_combined/install/lidar_slam_test/share/lidar_slam_test/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ws_sensor_combined/install/livox_ros_driver/share/livox_ros_driver/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ws_sensor_combined/install/localization/lib/localization/: localization_node
ws_sensor_combined/install/localization/share/localization/: local_setup.sh  package.sh
ws_sensor_combined/install/nearest_poster_yaw/share/nearest_poster_yaw/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh
ws_sensor_combined/install/odometry/lib/odometry/: run
ws_sensor_combined/install/odometry/share/odometry/: package.sh  package.xml
ws_sensor_combined/install/px4_msgs/share/px4_msgs/: package.sh
ws_sensor_combined/install/px4_ros_com/lib/px4_ros_com/: PointCloudProcessor  debug_vect_advertiser  offboard_control  sensor_combined_listener  test_flight_control  vehicle_gps_position_listener
ws_sensor_combined/install/px4_ros_com/share/px4_ros_com/: local_setup.sh  package.ps1  package.sh
ws_sensor_combined/install/slam_visualization/share/slam_visualization/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ws_sensor_combined/install/velodyne_laserscan/share/velodyne_laserscan/: package.bash  package.zsh
ws_sensor_combined/log/: latest_build  latest_list
ws_sensor_combined/src/: camera.py
ws_sensor_combined/src/classifier/: CMakeLists.txt
ws_sensor_combined/src/classifier/src/: class_names.txt  classifier.py  classifier_node.cpp
ws_sensor_combined/src/localization/: CMakeLists.txt
ws_sensor_combined/src/localization/src/: localization_node.cpp
ws_sensor_combined/src/log/: latest_build
ws_sensor_combined/src/mapping/: CMakeLists.txt  package.xml
ws_sensor_combined/src/mapping/src/: map_node.cpp
ws_sensor_combined/src/nearest_poster_yaw/: CMakeLists.txt
ws_sensor_combined/src/nearest_poster_yaw/launch/: driver.py  john.py  launch.py  nodes.py  sim.py
ws_sensor_combined/src/nearest_poster_yaw/src/: fake_poster_array.py  nearest_poster_node.cpp
ws_sensor_combined/src/odometry/: setup.py
ws_sensor_combined/src/odometry/odometry/: odometry_node.py
ws_sensor_combined/src/px4_ros_com/: CMakeLists.txt  env_reconstruction.cpp  package.xml
ws_sensor_combined/src/px4_ros_com/src/: PointCloudProcessor.cpp  PointCloudProcessorLocalGlobal.cpp  bound_detection.cpp  env_reconstruction.cpp  fakeposters.cpp  object_detection.cpp  poster_recon.cpp  predator_detection.cpp  vis_loc_GPS_spoof.cpp
ws_sensor_combined/src/px4_ros_com/src/examples/offboard/: offboard_control.cpp  test_flight_control.cpp
ws_sensor_combined/src/wpgen/: CMakeLists.txt  package.xml  setup.py
ws_sensor_combined/src/wpgen/wpgen/: ML_send_wp.py
(+135 files in other folders)
